# redlines

./: .gitignore  AGENT_GUIDE.md  CONTRIBUTING.md  Code_of_Conduct.md  LICENSE.txt  README-PT-BR.md  README.md  pyproject.toml  tox.ini
.github/workflows/: claude_xml.yml  docs.yml  python-package.yml  python-publish.yml
demo/: README.md  processor_comparison.py
docs/: index.html
docs/generated-docs/: index.html  redlines.html  search.js
docs/generated-docs/redlines/: cli.html  document.html  enums.html  processor.html  redlines.html
examples/: README.md  batch_diff.py  ci_check.py  compare_files.py  custom_tokenizer.py  generate_report.py  pre_commit_hook.sh
redline/: redline.py
redlines/: __init__.py  cli.py  document.py  enums.py  json_schema.json  pdf.py  processor.py  redlines.py
tests/: test_changes_api.py  test_cli.py  test_custom_tokenizer.py  test_document.py  test_error_messages.py  test_json_output.py  test_nupunkt_processor.py  test_pdf.py  test_redline.py
tests/documents/PlainTextFile/: test.txt
