[project]
name = "redlines"
version = "0.5.2"
description = "Compare text, and produce human-readable differences or deltas which look like track changes in Microsoft Word."
readme = "README.md"
authors = [
    { name = "houfu", email = "houfu@outlook.sg" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "rich-click>=1.6.1",
    "rich>=13.3.5",
]
urls = { homepage = "https://houfu.github.io/redlines/", repository = "https://github.com/houfu/redlines" }

[project.optional-dependencies]
nupunkt = [
    "nupunkt>=0.6.0; python_version>='3.11'",
]
levenshtein = ["Levenshtein>=0.27.1"]

[project.scripts]
redlines = 'redlines.cli:cli'

[tool.uv]
dev-dependencies = [
    "mypy>=1.14.1",
    "pdoc>=14.1.0",
    "pytest>=7.4.2",
    "pytest-cov>=3.0.0",
    "pytest-sugar>=0.9.7",
    "tox>=3.28.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"


[tool.mypy]
python_version = "3.11"
strict = true
disable_error_code = "misc"

ignore_missing_imports = false
follow_untyped_imports = true

implicit_optional = true
strict_optional = true

show_error_context = true
show_error_code_links = true
pretty = true

[[tool.mypy.overrides]]
module = "nupunkt"
ignore_missing_imports = true
